feat: add gallery styles
MODULE-1-PART-3-gallery

--- a/css/styles.css
+++ b/css/styles.css
@@ -60,3 +60,14 @@ body {
     outline: none;
     background-color: var(--red-color);
 }
+
+#gallery {
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+#buttons {
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+}
